clusters/dijkstra/immich/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich
  namespace: immich
  labels:
    app: immich
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich
  template:
    metadata:
      labels:
        app: immich
    spec:
      containers:
        - name: immich
          image: ghcr.io/immich-app/immich-server:v2.4.1
          ports:
            - containerPort: 2283
            - name: metrics-api
              containerPort: 8081
            - name: metrics-micro
              containerPort: 8082
          volumeMounts:
            - name: photos
              mountPath: /data
          resources:
            requests:
              memory: "256Mi"
              cpu: "50m"
            limits:
              memory: "768Mi"
              cpu: "1000m"
      volumes:
        - name: photos
          persistentVolumeClaim:
            claimName: immich-photos-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-redis
  namespace: immich
  labels:
    app: immich-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich-redis
  template:
    metadata:
      labels:
        app: immich-redis
    spec:
      containers:
        - name: immich-redis
          image: docker.io/valkey/valkey:9@sha256:fb8d272e529ea567b9bf1302245796f21a2672b8368ca3fcb938ac334e613c8f
          ports:
            - containerPort: 6379
          resources:
            requests:
              memory: "32Mi"
              cpu: "10m"
            limits:
              memory: "128Mi"
              cpu: "300m"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-postgres
  namespace: immich
  labels:
    app: immich-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich-postgres
  template:
    metadata:
      labels:
        app: immich-postgres
    spec:
      volumes:
        - name: immich-data-storage
          persistentVolumeClaim:
            claimName: immich-data-pvc
      containers:
        - name: immich-postgres
          image: ghcr.io/immich-app/postgres:14-vectorchord0.4.3-pgvectors0.2.0@sha256:bcf63357191b76a916ae5eb93464d65c07511da41e3bf7a8416db519b40b1c23
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: immich-data-storage
              mountPath: /var/lib/postgresql/data
          resources:
            requests:
              memory: "256Mi"
              cpu: "50m"
            limits:
              memory: "1Gi"
              cpu: "1000m"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-machine-learning
  namespace: immich
  labels:
    app: immich-machine-learning
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich-machine-learning
  template:
    metadata:
      labels:
        app: immich-machine-learning
    spec:
      volumes:
        - name: immich-ml-storage
          persistentVolumeClaim:
            claimName: immich-ml-pvc
      containers:
        - name: immich-machine-learning
          image: ghcr.io/immich-app/immich-machine-learning:v2.4.1
          ports:
            - containerPort: 3003
          volumeMounts:
            - name: immich-ml-storage
              mountPath: /cache
          resources:
            requests:
              memory: "512Mi"
              cpu: "50m"
            limits:
              memory: "1536Mi"
              cpu: "2000m"
