clusters/dijkstra/immich/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich
  namespace: immich
  annotations:
    tailscale.com/expose: "true"
    tailscale.com/hostname: "immich"
spec:
  selector:
    app: immich
  ports:
    - name: immich-http
      protocol: TCP
      port: 80
      targetPort: 2283
---
apiVersion: v1
kind: Service
metadata:
  name: immich-metrics
  namespace: immich
  labels:
    app: immich-metrics
spec:
  selector:
    app: immich
  ports:
    - name: metrics-api
      protocol: TCP
      port: 8081
      targetPort: metrics-api
    - name: metrics-micro
      protocol: TCP
      port: 8082
      targetPort: metrics-micro
---
apiVersion: v1
kind: Service
metadata:
  name: immich-redis
  namespace: immich
spec:
  selector:
    app: immich-redis
  ports:
    - name: redis-port
      protocol: TCP
      port: 6379
      targetPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: immich-postgres
  namespace: immich
spec:
  selector:
    app: immich-postgres
  ports:
    - name: postgres-port
      protocol: TCP
      port: 5432
      targetPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: immich-machine-learning
  namespace: immich
spec:
  selector:
    app: immich-machine-learning
  ports:
    - name: immich-machine-learning-http
      protocol: TCP
      port: 80
      targetPort: 3003
